--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/snippets/tbl_stats_by_source.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/snippets/tbl_stats_by_source.html
@@ -11,7 +11,11 @@
         <td>{{ uri_source.name }}</td>
         <td>{{ uri_source.waiting }}</td>
         <td>{{ uri_source.good }}</td>
-        <td><a href="{% url uri_problems uri_source.id %}">{{ uri_source.bad }}</a></td>
+        {% if uri_source.bad %}
+            <td><a href="{% url uri_problems uri_source.id %}">{{ uri_source.bad }}</a></td>
+        {% else %}
+            <td>0</td>
+        {% endif %}
         <td>{{ uri_source.ratio }}</td>
     </tr>
     {% endfor %}
