sipmanager corrected calculation of remaining images
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1916 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
@@ -61,6 +61,7 @@
 <table border="1">
   <th>name or ip</th>
   <th>Items</th>
+  <th>Waiting</th>
   <th>Good</th>
   <th>Bad</th>
   <th>Ratio</th>
@@ -68,6 +69,7 @@
     <tr>
       <td>{{ webserver.name }}</td>
       <td>{{ webserver.count }}</td>
+      <td>{{ webserver.waiting }}</td>
       <td>{{ webserver.good }}</td>
       <td>
         {% if webserver.bad %}
@@ -79,6 +81,14 @@
       <td>{{ webserver.ratio }}</td>
     </tr>
   {% endfor %}
+  <tr>
+    <td><b>Summary</b></td>
+    <td><b>{{ webservers_summary.count }}</b></td>
+    <td><b>{{ webservers_summary.waiting }}</b></td>
+    <td><b>{{ webservers_summary.good }}</b></td>
+    <td><b>{{ webservers_summary.bad }}</b></td>
+    <td>&nbsp;</td>
+  </tr>
 </table>
 
 
