sipmanager added navigator
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1920 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
@@ -8,7 +8,13 @@
 
 <h3>{{ request }}</h3>
 
-<h3>Problematic items with mime type: {{ mime_type }}</h3>
+<h3>Problematic items, filtered on: {{ filter_label }}</h3>
+
+<p>
+Found {{ item_count }} items matching filter
+</p>
+
+{% include "plug_uris/snippets/navigator.html" %}
 
 <table border="1">
   <th>url</th>
@@ -25,7 +31,7 @@
   {% endfor %}
 </table>
 
-
+{% include "plug_uris/snippets/navigator.html" %}
 
 
 
