--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
@@ -44,7 +44,7 @@
       <tr>
         <td>{{ err_by_reason.err_msg }}</td>
         <td>
-        {% if webserver.bad %}
+        {% if err_by_reason.count %}
           <a href="{% url uri_bad_by_req_err request.pk err_by_reason.err_code %}">{{ err_by_reason.count }}</a>
         {% else %}
           0
