sipmanager some template updates
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1924 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_all_requests.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_all_requests.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<a href="{% url uri_stats_idx %}">Statistics</a>
+<a href="{% url top_index %}">Start</a>
 
 <h2>Grouped by request</h2>
 
