--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
@@ -4,9 +4,13 @@
 
 {% block content %}
 
-<a href="{% url uri_stats_idx %}">Statistics</a>
+<ul>
+  <li><a href="{% url top_index %}">Start</a>
+  <li><a href="{% url uri_stats_by_req request.session.req_filter.req_id %}">Back to request overview</a>
+</ul>
 
-<h3>{{ request }}</h3>
+
+<h3>{{ req }}</h3>
 
 <h3>Problematic items, filtered on: {{ filter_label }}</h3>
 
