sipmanager some template updates
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1925 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
@@ -27,6 +27,7 @@ Found {{ item_count }} items matching filter
   <th>err msg</th>
   {% for problem in problems %}
     <tr>
+      <td>{{ problem.uri_id }}</td>
       <td>{{ problem.url }}</td>
       <td>{{ problem.status }}</td>
       <td>{{ problem.errname }}</td>
