sipmanager some template updates
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1926 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
@@ -21,6 +21,7 @@ Found {{ item_count }} items matching filter
 {% include "plug_uris/snippets/navigator.html" %}
 
 <table border="1">
+  <th>uri id</th>
   <th>url</th>
   <th>status</th>
   <th>error</th>
