sipmanager some template updates
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1927 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
@@ -32,7 +32,13 @@ Found {{ item_count }} items matching filter
       <td>{{ problem.url }}</td>
       <td>{{ problem.status }}</td>
       <td>{{ problem.errname }}</td>
-      <td>{{ problem.err_msg }}</td>
+      <td>
+        {% ifequal problem.errname problem.err_msg %}
+           &nbsp;
+        {% else %}
+          {{ problem.err_msg }}
+        {% endifequal %}
+      </td>
     </tr>
   {% endfor %}
 </table>
