sipmanager some template updates
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1929 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/stats_by_request.html
@@ -22,7 +22,7 @@
         <td>{{ mime_result.ok }}</td>
         <td>
         {% if mime_result.bad %}
-          <a href="{% url uri_bad_by_req_mime request.pk mime_result.mime_url %}">{{ mime_result.bad }}</a>
+          <a href="{% url uri_bad_by_req_mime request.pk mime_result.name|urlencode %}">{{ mime_result.bad }}</a>
         {% else %}
           0
         {% endif %}
