--- a/tools/multilingo/apps/multi_lingo/templates/overview.html
+++ b/tools/multilingo/apps/multi_lingo/templates/overview.html
@@ -7,7 +7,7 @@
 <h3>The following static pages are available</h3>
 <p>
   {% for page in pages %}
-    <a href="/{{ page }}">{{ page }}</a>
+    <a href="/{{ portal_prefix }}/{{ page }}">{{ page }}</a>
     <br/>
   {% endfor %}
 </p>
@@ -15,8 +15,5 @@
 <h3>Manage translations</h3>
 To work with translations please go to <a href="/rosetta/pick/">here</a>
 
-<h3>Export</h3>
-Download a tarball for usage on a Europeana portal
-<a href="{% url ml-export %}">ss</a>
 </body>
 </html>
