--- a/tools/multilingo/rosetta/templates/rosetta/base.html
+++ b/tools/multilingo/rosetta/templates/rosetta/base.html
@@ -26,8 +26,8 @@
             {% block header %}
             <div id="branding">
                 <h1 id="site-name">
-		<a href="{% url rosetta-pick-file %}">Rosetta</a>
-		&nbsp;&nbsp;
+		<a href="{% url rosetta-pick-file %}">Rosetta home</a>
+		&nbsp;-&nbsp;
 		<a href="/">Static pages</a>
 		</h1>
             </div>
