--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
@@ -13,6 +13,9 @@
 <h3>{{ req }}</h3>
 
 <h3>Problematic items, filtered on: {{ filter_label }}</h3>
+<p>
+<a href="{% url uri_bad_rescedule %}">Rescedule</a>
+</p>
 
 <p>
 Found {{ item_count }} items matching filter
