--- a/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
+++ b/tools/sip_manager/sip_manager/apps/plug_uris/templates/plug_uris/bad_by_request.html
@@ -14,7 +14,7 @@
 
 <h3>Problematic items, filtered on: {{ filter_label }}</h3>
 <p>
-<a href="{% url uri_bad_rescedule %}">Rescedule</a>
+<h4><a href="{% url uri_bad_rescedule %}">Rescedule</a> all bad items in this category</h4>
 </p>
 
 <p>
