--- a/tools/multilingo/templates/base.html
+++ b/tools/multilingo/templates/base.html
@@ -1,4 +1,7 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+{% load i18n %}<html xmlns="http://www.w3.org/1999/xhtml">
+
+<!-- Multilingo language used on this page: {{ lang }}  -->
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link rel="shortcut icon" href="/portal/favicon.ico"/>
