multilingo completed cleanup
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@2236 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/multilingo/templates/admin/base_site.html
+++ b/tools/multilingo/templates/admin/base_site.html
@@ -5,7 +5,7 @@
 
 {% block branding %}
                 <h1 id="site-name">
-		<a href="{% url rosetta-pick-file %}">Rosetta home</a>
+		<a href="{% url rosetta-pick-file %}">Rosetta select language</a>
 		&nbsp;-&nbsp;
 		<a href="/">Static pages</a>
 		</h1>
