--- a/tools/multilingo/templates/base.html
+++ b/tools/multilingo/templates/base.html
@@ -181,6 +181,7 @@ function ContactMe(prefix,suffix){
         </div>
     </div>
         <div class="yui-b">
+	<p align="right">{{ lang }}</p>{% comment %} debug help, indicate lang{% endcomment %}
 <a href="index.html">
     <img src="images/europeana-logo-small.jpg" alt="Click here to return to the Europeana homepage" title="logo Europeana think culture"/>
             <img src="images/think_culture_en_small.gif" alt=""/>
