--- a/tools/multilingo/rosetta/templates/rosetta/base.html
+++ b/tools/multilingo/rosetta/templates/rosetta/base.html
@@ -6,11 +6,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="{{ADMIN_MEDIA_PREFIX}}css/base.css" type="text/css"/>
     <link rel="stylesheet" href="{{ADMIN_MEDIA_PREFIX}}css/forms.css" type="text/css"/>
-    <link rel="stylesheet" href="{{ADMIN_MEDIA_PREFIX}}css/changelists.css" type="text/css"/>	
+    <link rel="stylesheet" href="{{ADMIN_MEDIA_PREFIX}}css/changelists.css" type="text/css"/>
     <style type="text/css" media="screen">
         {% include 'rosetta/css/rosetta.css' %}
     </style>
-    <script src="http://www.google.com/jsapi" type="text/javascript"></script>    
+    <script src="http://www.google.com/jsapi" type="text/javascript"></script>
     <script type="text/javascript">
     //<!--
         google.load("jquery", "1.3");
@@ -25,7 +25,11 @@
         <div id="header">
             {% block header %}
             <div id="branding">
-                <h1 id="site-name"><a href="{% url rosetta-pick-file %}">Rosetta</a> </h1>
+                <h1 id="site-name">
+		<a href="{% url rosetta-pick-file %}">Rosetta select language</a>
+		&nbsp;-&nbsp;
+		<a href="/">Static pages</a>
+		</h1>
             </div>
             {% endblock %}
         </div>
