--- a/portal/src/main/webapp/theme/cw/css/reset-text-grid.css
+++ b/portal/src/main/webapp/theme/cw/css/reset-text-grid.css
@@ -143,9 +143,6 @@ address,
 fieldset {
 	margin-bottom: 20px;
 }
-
-/*_______________________GRID________________________________*/
-
 /*
 	960 Grid System ~ Core CSS.
 	Learn more ~ http://960.gs/
@@ -159,9 +156,9 @@ fieldset {
 .container_12,
 .container_16
 {
-	width: 94%;
-	margin-left: 3%;
-	margin-right: 3%;
+	margin-left: auto;
+	margin-right: auto;
+	width: 960px;
 }
 
 /* =Grid >> Global
@@ -186,32 +183,32 @@ fieldset {
 {
 	display: inline;
 	float: left;
-	margin-left: 1%;
-	margin-right: 1%;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .container_12 .grid_3,
 .container_16 .grid_4
 {
-	width: 23%;
+	width: 220px;
 }
 
 .container_12 .grid_6,
 .container_16 .grid_8
 {
-	width: 48%;
+	width: 460px;
 }
 
 .container_12 .grid_9,
 .container_16 .grid_12
 {
-	width: 73%;
+	width: 700px;
 }
 
 .container_12 .grid_12,
 .container_16 .grid_16
 {
-	width: 98%;
+	width: 940px;
 }
 
 /* =Grid >> Children (Alpha ~ First, Omega ~ Last)
@@ -232,42 +229,42 @@ fieldset {
 
 .container_12 .grid_1
 {
-	width: 6.333%;
+	width: 60px;
 }
 
 .container_12 .grid_2
 {
-	width: 14.666%;
+	width: 140px;
 }
 
 .container_12 .grid_4
 {
-	width: 31.333%;
+	width: 300px;
 }
 
 .container_12 .grid_5
 {
-	width: 39.666%;
+	width: 380px;
 }
 
 .container_12 .grid_7
 {
-	width: 56.333%;
+	width: 540px;
 }
 
 .container_12 .grid_8
 {
-	width: 64.666%;
+	width: 620px;
 }
 
 .container_12 .grid_10
 {
-	width: 81.333%;
+	width: 780px;
 }
 
 .container_12 .grid_11
 {
-	width: 89.666%;
+	width: 860px;
 }
 
 /* =Grid >> 16 Columns
@@ -275,62 +272,62 @@ fieldset {
 
 .container_16 .grid_1
 {
-	width: 4.25%;
+	width: 40px;
 }
 
 .container_16 .grid_2
 {
-	width: 10.5%;
+	width: 100px;
 }
 
 .container_16 .grid_3
 {
-	width: 16.75%;
+	width: 160px;
 }
 
 .container_16 .grid_5
 {
-	width: 29.25%;
+	width: 280px;
 }
 
 .container_16 .grid_6
 {
-	width: 35.5%;
+	width: 340px;
 }
 
 .container_16 .grid_7
 {
-	width: 41.75%;
+	width: 400px;
 }
 
 .container_16 .grid_9
 {
-	width: 54.25%;
+	width: 520px;
 }
 
 .container_16 .grid_10
 {
-	width: 60.5%;
+	width: 580px;
 }
 
 .container_16 .grid_11
 {
-	width: 66.75%;
+	width: 640px;
 }
 
 .container_16 .grid_13
 {
-	width: 79.25%;
+	width: 760px;
 }
 
 .container_16 .grid_14
 {
-	width: 85.5%;
+	width: 820px;
 }
 
 .container_16 .grid_15
 {
-	width: 91.75%;
+	width: 880px;
 }
 
 /* =Prefix Extra Space >> Global
@@ -339,19 +336,19 @@ fieldset {
 .container_12 .prefix_3,
 .container_16 .prefix_4
 {
-	padding-left: 25%;
+	padding-left: 240px;
 }
 
 .container_12 .prefix_6,
 .container_16 .prefix_8
 {
-	padding-left: 50%;
+	padding-left: 480px;
 }
 
 .container_12 .prefix_9,
 .container_16 .prefix_12
 {
-	padding-left: 75%;
+	padding-left: 720px;
 }
 
 /* =Prefix Extra Space >> 12 Columns
@@ -359,42 +356,42 @@ fieldset {
 
 .container_12 .prefix_1
 {
-	padding-left: 8.333%;
+	padding-left: 80px;
 }
 
 .container_12 .prefix_2
 {
-	padding-left: 16.666%;
+	padding-left: 160px;
 }
 
 .container_12 .prefix_4
 {
-	padding-left: 33.333%;
+	padding-left: 320px;
 }
 
 .container_12 .prefix_5
 {
-	padding-left: 41.666%;
+	padding-left: 400px;
 }
 
 .container_12 .prefix_7
 {
-	padding-left: 58.333%;
+	padding-left: 560px;
 }
 
 .container_12 .prefix_8
 {
-	padding-left: 66.666%;
+	padding-left: 640px;
 }
 
 .container_12 .prefix_10
 {
-	padding-left: 83.333%;
+	padding-left: 800px;
 }
 
 .container_12 .prefix_11
 {
-	padding-left: 91.666%;
+	padding-left: 880px;
 }
 
 /* =Prefix Extra Space >> 16 Columns
@@ -402,62 +399,62 @@ fieldset {
 
 .container_16 .prefix_1
 {
-	padding-left: 6.25%;
+	padding-left: 60px;
 }
 
 .container_16 .prefix_2
 {
-	padding-left: 12.5%;
+	padding-left: 120px;
 }
 
 .container_16 .prefix_3
 {
-	padding-left: 18.75%;
+	padding-left: 180px;
 }
 
 .container_16 .prefix_5
 {
-	padding-left: 31.25%;
+	padding-left: 300px;
 }
 
 .container_16 .prefix_6
 {
-	padding-left: 37.5%;
+	padding-left: 360px;
 }
 
 .container_16 .prefix_7
 {
-	padding-left: 43.75%;
+	padding-left: 420px;
 }
 
 .container_16 .prefix_9
 {
-	padding-left: 56.25%;
+	padding-left: 540px;
 }
 
 .container_16 .prefix_10
 {
-	padding-left: 62.5%;
+	padding-left: 600px;
 }
 
 .container_16 .prefix_11
 {
-	padding-left: 68.75%;
+	padding-left: 660px;
 }
 
 .container_16 .prefix_13
 {
-	padding-left: 81.25%;
+	padding-left: 780px;
 }
 
 .container_16 .prefix_14
 {
-	padding-left: 87.5%;
+	padding-left: 840px;
 }
 
 .container_16 .prefix_15
 {
-	padding-left: 93.75%;
+	padding-left: 900px;
 }
 
 /* =Suffix Extra Space >> Global
@@ -466,19 +463,19 @@ fieldset {
 .container_12 .suffix_3,
 .container_16 .suffix_4
 {
-	padding-right: 25%;
+	padding-right: 240px;
 }
 
 .container_12 .suffix_6,
 .container_16 .suffix_8
 {
-	padding-right: 50%;
+	padding-right: 480px;
 }
 
 .container_12 .suffix_9,
 .container_16 .suffix_12
 {
-	padding-right: 75%;
+	padding-right: 720px;
 }
 
 /* =Suffix Extra Space >> 12 Columns
@@ -486,42 +483,42 @@ fieldset {
 
 .container_12 .suffix_1
 {
-	padding-right: 8.333%;
+	padding-right: 80px;
 }
 
 .container_12 .suffix_2
 {
-	padding-right: 16.666%;
+	padding-right: 160px;
 }
 
 .container_12 .suffix_4
 {
-	padding-right: 33.333%;
+	padding-right: 320px;
 }
 
 .container_12 .suffix_5
 {
-	padding-right: 41.666%;
+	padding-right: 400px;
 }
 
 .container_12 .suffix_7
 {
-	padding-right: 58.333%;
+	padding-right: 560px;
 }
 
 .container_12 .suffix_8
 {
-	padding-right: 66.666%;
+	padding-right: 640px;
 }
 
 .container_12 .suffix_10
 {
-	padding-right: 83.333%;
+	padding-right: 800px;
 }
 
 .container_12 .suffix_11
 {
-	padding-right: 91.666%;
+	padding-right: 880px;
 }
 
 /* =Suffix Extra Space >> 16 Columns
@@ -529,62 +526,62 @@ fieldset {
 
 .container_16 .suffix_1
 {
-	padding-right: 6.25%;
+	padding-right: 60px;
 }
 
 .container_16 .suffix_2
 {
-	padding-right: 16.5%;
+	padding-right: 120px;
 }
 
 .container_16 .suffix_3
 {
-	padding-right: 18.75%;
+	padding-right: 180px;
 }
 
 .container_16 .suffix_5
 {
-	padding-right: 31.25%;
+	padding-right: 300px;
 }
 
 .container_16 .suffix_6
 {
-	padding-right: 37.5%;
+	padding-right: 360px;
 }
 
 .container_16 .suffix_7
 {
-	padding-right: 43.75%;
+	padding-right: 420px;
 }
 
 .container_16 .suffix_9
 {
-	padding-right: 56.25%;
+	padding-right: 540px;
 }
 
 .container_16 .suffix_10
 {
-	padding-right: 62.5%;
+	padding-right: 600px;
 }
 
 .container_16 .suffix_11
 {
-	padding-right: 68.75%;
+	padding-right: 660px;
 }
 
 .container_16 .suffix_13
 {
-	padding-right: 81.25%;
+	padding-right: 780px;
 }
 
 .container_16 .suffix_14
 {
-	padding-right: 87.5%;
+	padding-right: 840px;
 }
 
 .container_16 .suffix_15
 {
-	padding-right: 93.75%;
+	padding-right: 900px;
 }
 
 /* =Clear Floated Elements
