rearranged input fields on advanced search, moved css to screen.css

--- a/portal/src/main/webapp/theme/cw/css/colors.css
+++ b/portal/src/main/webapp/theme/cw/css/colors.css
@@ -26,3 +26,4 @@
 
 /* search forms */
 .azure #search #search_simple {background: #eaeaea;}
+.azure #search .search_advanced table td {background: #eaeaea;}
